--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
     "typescript": "4.9.4"
   }
