--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^8.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
