--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@reduxjs/toolkit": "^1.9.1"
+  
   }
 }
