--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@next/font": "^13.0.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^8.0.1",
+    "interweave": "^13.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
-    "typescript": "4.9.4",
-    "@reduxjs/toolkit": "^1.9.1"
-  
+    "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.13.1"
   }
 }
